@@ -1,0 +1,51 @@
+[interface]
+classification = assembly
+
+[parameters]
+;;Location of velvet
+$;VELVET_PATH$; = $;VELVET_INSTALL_DIR$;
+
+;; Should describe the format of the lists in the input section. Should always 
+;; have the same number of formats as input lists (comma separated)
+;; Example: fasta,fasta,fastq 
+;;    if there were three input lists, the first 2 being in fasta format and the last in fastq
+$;SHORT_FORMAT$; =
+$;LONG_FORMAT$; = 
+
+[input]
+;; A list of paired end read files. Each file must contain pairs ordered the same in each of the two
+;; files. To specify multiple paired end file pairs, create comma separated list of lists.
+;; Example: /path/to/paired_end_pairs.list,/path/to/another/file.list
+$;SHORT_INPUT_LIST$; = 
+$;LONG_INPUT_LIST$; =
+
+[output]
+$;OUTPUT_TOKEN$; = default
+$;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;LONG_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/long_reads.list
+$;SHORT_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/short_reads.list
+
+[component]
+$;COMPONENT_NAME$; = prepare_paired_ends_for_velvet
+$;DESCRIPTION$; = none
+$;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;PIPELINE_TOKEN$; = unnamed
+
+;The version,revision,tag here is set by an interpolated CVS tag
+$;VERSION$; = $Name$
+$;RELEASE_TAG$; = $Name$
+$;REVISION$; = $Revision: 5801 $
+
+$;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
+
+;Distributed options
+$;NODISTRIB$; = 0
+
+;the following keys are replaced at runtime by the invocation script
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
+
+[include]
+$;PROJECT_CONFIG$;=
