@@ -1,0 +1,59 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
+<commandSetRoot xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation='commandSet.xsd'>
+    <commandSet type="serial">
+        <state>incomplete</state>
+        <name>velvet workflow</name>
+        <!--Preprocessing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>create output directory</name>
+			<state>incomplete</state>
+			<executable>mkdir</executable>
+			<arg>-p -m 777 $;OUTPUT_DIRECTORY$;</arg>
+		</command>
+        <!--Processing-->
+		<command>
+			<type>RunUnixCommand</type>
+			<name>prepare paired end files for velvet</name>
+			<state>incomplete</state>
+			<executable>$;BIN_DIR$;/prepare_paired_ends_for_velvet</executable>
+            <param>
+               <key>--output_directory</key>
+               <value>$;OUTPUT_DIRECTORY$;</value>
+            </param>
+            <param>
+               <key>--short_input_list</key>
+               <value>&quot;$;SHORT_INPUT_LIST$;&quot;</value>
+            </param>
+            <param>
+               <key>--short_format</key>
+               <value>&quot;$;SHORT_FORMAT$;&quot;</value>
+            </param>
+            <param>
+               <key>--short_output_list</key>
+               <value>&quot;$;SHORT_OUTPUT_LIST$;&quot;</value>
+            </param>
+            <param>
+               <key>--long_input_list</key>
+               <value>&quot;$;LONG_INPUT_LIST$;&quot;</value>
+            </param>
+            <param>
+               <key>--long_format</key>
+               <value>&quot;$;LONG_FORMAT$;&quot;</value>
+            </param>
+            <param>
+               <key>--long_output_list</key>
+               <value>&quot;$;LONG_OUTPUT_LIST$;&quot;</value>
+            </param>
+            <param>
+               <key>--log</key>
+               <value>$;OUTPUT_DIRECTORY$;/run_velvet_optimser.log</value>
+            </param>
+            <param>
+               <key>--velvet_path</key>
+               <value>$;VELVET_PATH$;</value>
+            </param>
+		</command>
+	</commandSet>
+</commandSetRoot>
