@@ -128,7 +128,7 @@ sub MY::postamble {
     my $postamble = "WORKFLOW_DOCS_DIR=$workflowdocsdir\nSAMPLE_DOCS_DIR=$sampledocsdir";
     $postamble .= << 'END';
 
-ergatis_install : dirs samples shellwrappers c_apps pipeline_templates 454_mplex_seq_bin_trim aat_aa aat_aa_masked aat_na aat_na_masked adjust_bsml_coordinates antigenic aragorn augustus auto_gene_curation backupdb bepipred ber blast2go bsml2chado bsml2gff3 bsml2fasta bsml2featurerelationships bsml2interevidence_fasta bsml2ptt bsml2tbl bsml_qc concatenate_files clustalw combine_ncRNA_alignments cvtermpath_closure fasta2bsml fgenesh find_homopolymers formatdb genbank2bsml geneid genemark genewise genezilla genscan genscan-plus gff3_to_annotab gff3_to_fasta glimmer3 glimmerHMM hmmpfam hmmls fuzznuc infernal initdb intergenic_analysis iprscan islandpath j_ortholog_clusters jaccard legacy2bsml lipop lipoprotein_motif load_ber_for_manatee mask_by_analysis metagene mummer mumsgraph mugsyprep mugsycog muscle ncbi-blastp ncbi-blastn ncbi-blastn_compress ncbi-blastx ngap nucmer_snps obo2chado open_reading_frames outer_membrane_domain overlap_analysis p_func pangenome_blast_parse pangenome_do_analysis pangenome_make_graphs panther parse_evidence parse_for_ncRNAs pathway_tools_input pepstats percent_gc phage_finder phat phobos phylip_dnadist pipeline_summary predict_prokaryotic_gene_function predotar priam_ec_assignment promote_gene_prediction ps_scan psiblast quicktree rdp_classifier refresh_chado_mart repeatmasker RNAmmer rpsblast runsql scp_files seg signalp snap split_fasta split_multifasta stap_aligner stap_classifier start_site_curation tabula_rasa targetp tbl2asn tmhmm train_for_glimmer3_iteration translate_sequence trf tRNAscan-SE tRNAscan-SE_compress velvet_optimiser wait wu-blastp wu-blastn wu-blastx wu-tblastn xdformat sffinfo uclust nucmer rrna_hmm_fs create_amoscmp_input
+ergatis_install : dirs samples shellwrappers c_apps pipeline_templates 454_mplex_seq_bin_trim aat_aa aat_aa_masked aat_na aat_na_masked adjust_bsml_coordinates antigenic aragorn augustus auto_gene_curation backupdb bepipred ber blast2go bsml2chado bsml2gff3 bsml2fasta bsml2featurerelationships bsml2interevidence_fasta bsml2ptt bsml2tbl bsml_qc concatenate_files clustalw combine_ncRNA_alignments cvtermpath_closure fasta2bsml fgenesh find_homopolymers formatdb genbank2bsml geneid genemark genewise genezilla genscan genscan-plus gff3_to_annotab gff3_to_fasta glimmer3 glimmerHMM hmmpfam hmmls fuzznuc infernal initdb intergenic_analysis iprscan islandpath j_ortholog_clusters jaccard legacy2bsml lipop lipoprotein_motif load_ber_for_manatee mask_by_analysis metagene mummer mumsgraph mugsyprep mugsycog muscle ncbi-blastp ncbi-blastn ncbi-blastn_compress ncbi-blastx ngap nucmer_snps obo2chado open_reading_frames outer_membrane_domain overlap_analysis p_func pangenome_blast_parse pangenome_do_analysis pangenome_make_graphs panther parse_evidence parse_for_ncRNAs pathway_tools_input pepstats percent_gc phage_finder phat phobos phylip_dnadist pipeline_summary predict_prokaryotic_gene_function predotar prepare_paired_ends_for_velvet priam_ec_assignment promote_gene_prediction ps_scan psiblast quicktree rdp_classifier refresh_chado_mart repeatmasker RNAmmer rpsblast runsql scp_files seg signalp snap split_fasta split_multifasta stap_aligner stap_classifier start_site_curation tabula_rasa targetp tbl2asn tmhmm train_for_glimmer3_iteration translate_sequence trf tRNAscan-SE tRNAscan-SE_compress velvet_optimiser wait wu-blastp wu-blastn wu-blastx wu-tblastn xdformat sffinfo uclust nucmer rrna_hmm_fs create_amoscmp_input
 
 	@install components/shared/iterator_template.xml $(WORKFLOW_DOCS_DIR)
 	@install components/shared/file_iterator_template.xml $(WORKFLOW_DOCS_DIR)
@@ -1062,6 +1062,11 @@ predotar	:
 	@install components/predotar/predotar.xml $(WORKFLOW_DOCS_DIR)
 	@install components/predotar/predotar.i1.xml $(WORKFLOW_DOCS_DIR)
 	@install components/predotar/predotar.config $(WORKFLOW_DOCS_DIR)
+
+prepare_paired_ends_for_velvet	:
+	@echo "Installing prepare_paired_ends_for_velvet workflows in $(WORKFLOW_DOCS_DIR)"
+	@install components/prepare_paired_ends_for_velvet/prepare_paired_ends_for_velvet.xml $(WORKFLOW_DOCS_DIR)
+	@install components/prepare_paired_ends_for_velvet/prepare_paired_ends_for_velvet.config $(WORKFLOW_DOCS_DIR)
 
 priam_ec_assignment	:
 	@echo "Installing priam_ec_assignment workflows in $(WORKFLOW_DOCS_DIR)"
