@@ -1,5 +1,7 @@
 next
 ----
+-prepare_paired_ends_for_velvet: new component
+-velvet_optimiser: now allows an arbitrary number of input files
 -create_amoscmp_input: new component
 -identify_human_contaminants: new component
 -rrna_hmm_fs: new component
